# LinearCPP

./: .gitignore  CMakeLists.txt  README.md  matrix_bench
MatrixLibrary/benchmarks/: bench_matrix.cpp  results.md
MatrixLibrary/data/: fileA.txt  fileB.txt  filevb.txt
MatrixLibrary/examples/: Main.cpp
MatrixLibrary/include/: Helper.hpp  LinearSolver.hpp  Matrix.hpp
